--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="Remote, Squash, Coaching, Game, Rackets, Raquets, Analysis, Videos, Free, Online, Solo, Pairs, Drills, Beginner, Club, Advanced, Squash Tips, Movement, Ghosting, Squash 101, Routines, Technique, Swing, Serves, Returns, Boasts, Drops, Nicks, Sport, Improve, Training, Tips, Video, Lessons, Game, Court, Fitness, Equipment, Review, Skill, Tactics, Challenges, ">
 <meta name="author" content="Phillip Marlowe">
 <!--  Open Graph -->
-<meta property="og:title" content="BetterSquash.Com">
+<meta property="og:title" content="4PhrasalVerbs.Com">
 <meta property="og:description" content="Free online squash coaching videos to improve your game">
 <meta property="og:image" content="https://bettersquash.com/og-bettersquash.jpg">
 <meta property="og:url" content="https://BetterSquash.Com">
@@ -28,10 +28,10 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <!-- CSS -->
-<link rel="stylesheet" href="bettersquash.css">
+<link rel="stylesheet" href="4phrasalverbs.css">
 </head>
 <body>
-<h1 class="xxxlarge single-line" style="color: #9b1713">BETTER<br>SQUASH</h1>
+<h1 class="xxxlarge single-line" style="color: #4a6ebc">4 PHRASAL<br>VERBS</h1>
 <r-grid columns="7">
 <r-cell span="1-2" span-s="row">
 <a id="top"></a>
