--- a/index.html
+++ b/index.html
@@ -64,9 +64,15 @@
 </r-cell>
 <r-cell span="3.." span-s=row >
 <h2>INTRODUCTION</h2>
-<p>"<em>Hi, I'm Phillip, an ex-professional squash who now creates free online squash-related videos and other content.  This website links to all my projects and helps you find the type of content that interests you.<br><br>On the left, or above, depending on what type of device you are using, you will find a MENU section that links to all the projects and pages.  Below is a chronological list of all the updates.  If you are looking for some specific and can't find it, please email me and I will try to help.</em>"</p>
+<p>"<em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>Below is a table with a list of videos I have released.  Since I only started in early September 2020, there's not much here, but I will be adding more videos regularly.</em>"</p>
 <hr class="grey">
-<h2>WHAT'S NEW?</h2>
+<h2>THE VIDEOS</h2>
+<table class="w-full">
+<tr><th>Date</th><th>Code/Name</th><th>Link</th></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td>002 - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td>001 - What Are Phrasl Verbs?</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td>000 - About Me, This Channel and the Videos</td><td><a href="">x</a></td></tr>
+</table>
 </r-cell>
 </r-grid>
 <hr class="grey">
