--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 <h2>THE VIDEOS</h2>
 <table class="w-full">
 <tr><th>Date</th><th>Code/Name</th><th>Link</th></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td>002 - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td>001 - What Are Phrasl Verbs?</td><td><a href="">x</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td>000 - About Me, This Channel and the Videos</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">002</span> - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">001</span> - What Are Phrasl Verbs?</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">000</span> - About Me, This Channel and the Videos</td><td><a href="">x</a></td></tr>
 </table>
 </r-cell>
 </r-grid>
