--- a/index.html
+++ b/index.html
@@ -57,21 +57,19 @@
 <li><a href="https://www.linkedin.com/in/phillip-marlowe">LINKEDIN</a></li>
 </ul>
 <hr class="grey">
-<hr class="grey">
 <h3 style="margin-bottom: -5px;">CONTACT</h3>
 <p>I love receiving emails from viewers, so email me!<br><a href="mailto:4phrasalverbs@gmail.com">4phrasalverbs@gmail.com</a></p>
-<hr class="grey">
 </r-cell>
 <r-cell span="3.." span-s=row >
 <h2>INTRODUCTION</h2>
-<p>"<em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>Below is a table with a list of videos I have released.  Since I only started in early September 2020, there's not much here, but I will be adding more videos regularly.</em>"</p>
+<p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br>Below is a table with a list of videos I have released.<br>Since I only started in early September 2020, there's not much here, but I will be adding more videos regularly.</em></p>
 <hr class="grey">
 <h2>THE VIDEOS</h2>
 <table class="w-full">
 <tr><th>Date</th><th>Code/Name</th><th>Link</th></tr>
 <tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">002</span> - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">001</span> - What Are Phrasl Verbs?</td><td><a href="">x</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">000</span> - About Me, This Channel and the Videos</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">001</span> - What Are Phrasal Verbs?</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #4a6ebc;">000</span> - About Me, This Channel and The Videos</td><td><a href="">x</a></td></tr>
 </table>
 </r-cell>
 </r-grid>
