obscurated email manually

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <r-cell span="1-2" span-s="row">
 <a id="top"></a>
 <hr class="grey">
-<h4>"SIMPLE. EFFECTIVE. FUN."</h4>
+<h4>SIMPLE. EFFECTIVE. FUN.</h4>
 <hr class="grey">
 <h3 style="margin-bottom: -5px;">MENU</h3>
 <ul class="menulist compact">
@@ -58,7 +58,7 @@
 </ul>
 <hr class="grey">
 <h3 style="margin-bottom: -5px;">CONTACT</h3>
-<p>I love receiving emails from viewers, so email me!<br><a href="mailto:4phrasalverbs@gmail.com">4phrasalverbs@gmail.com</a></p>
+<p>I love receiving emails from viewers, so email me!<br><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
 </r-cell>
 <r-cell span="3.." span-s=row >
 <h2>INTRODUCTION</h2>
