--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <r-cell span="1-2" span-s=row>
 <p>© Copyright 2020 <a href="https://phillipmarlowe.com">Phillip Marlowe</a></p>
 </r-cell>
-<r-cell span="3.." span-s=row ><h1 class="large single-line right" style="color: #4a6ebc;padding-right: 0.1em;"><a class="OMG" href="#top">BACK TO TOP </a></h1>
+<r-cell span="3.." span-s=row ><h1 class="large single-line right" style="padding-right: 0.1em;"><a class="OMG" href="#top">BACK TO TOP </a></h1>
 </r-cell>
 </r-grid>
 </body>
