--- a/date.html
+++ b/date.html
@@ -38,6 +38,14 @@
 <hr class="grey">
 <h4>SIMPLE. EFFECTIVE. FUN.</h4>
 <hr class="grey">
+<h3 style="margin-bottom: -5px;">MENU</h3>
+<ul class="menulist compact">
+<li><a href="index.html">HOME</a></li>
+<li><a href="date.html">VIDEOS: DATE</a></li>
+<li><a href="playlists.html.html">VIDEOS: PLAYLISTS</a></li>
+<li><a href="alpha.html">VIDEOS: ALPHA</a></li>
+</ul>
+<hr class="grey">
 <h3 style="margin-bottom: -5px;">STATEMENT</h3>
 <p>"<em>I am passionate about creating English teaching videos and content that is useful and engaging to all standards of learners.</em>"</p>
 <hr class="grey">
