--- a/playlists.html
+++ b/playlists.html
@@ -38,6 +38,14 @@
 <hr class="grey">
 <h4>SIMPLE. EFFECTIVE. FUN.</h4>
 <hr class="grey">
+<h3 style="margin-bottom: -5px;">MENU</h3>
+<ul class="menulist compact">
+<li><a href="index.html">HOME</a></li>
+<li><a href="date.html">VIDEOS: DATE</a></li>
+<li><a href="playlists.html.html">VIDEOS: PLAYLISTS</a></li>
+<li><a href="alpha.html">VIDEOS: ALPHA</a></li>
+</ul>
+<hr class="grey">
 <h3 style="margin-bottom: -5px;">STATEMENT</h3>
 <p>"<em>I am passionate about creating English teaching videos and content that is useful and engaging to all standards of learners.</em>"</p>
 <hr class="grey">
@@ -54,10 +62,21 @@
 <p>I love receiving emails from viewers, so email me!<br><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
 </r-cell>
 <r-cell span="3.." span-s=row >
-<p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>Below is an introduction video that explains all you need to know about me, my channel and the videos.<br><br>Below that is a table with a list of the latest videos I have released.<br><br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.<br><br>The MENU section contains different ways to view the lists of videos.</em></hp>
-
+<h1>VIDEOS: LISTED BY PLAYLISTS</h1>
+<h3>PLEASE NOTE: THIS PAGE IS STILL UNDER CONSTRUCTION</h3>
+<p>Below are the videos I have released, separated into their playlists.<br></p>
+<p>You can also view ALL the videos listed <a href="date.html">Chronologically</a> or <a href="alpha.html">Alphabetically</a>.</p>
 <hr class="grey">
-<h2>LATEST VIDEOS</h2>
+<h2>LINGUISTIC THEMES <span class="small">(Same verb or particle)</span></h2>
+<table class="w-full">
+<tr><th>Published</th><th>Code/Name</th><th>Link</th></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">002</span> - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
+</table>
+<hr class="grey">
+<h2>SITUATIONAL THEMES <span class="small">(Location or usage)</span></h2>
+<p>No videos in this playlist yet - sorry!</p>
+<hr class="grey">
+<h2>YEAR PUBLISHED</h2>
 <table class="w-full">
 <tr><th>Published</th><th>Code/Name</th><th>Link</th></tr>
 <tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">002</span> - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
