--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 <r-grid columns="7">
 <r-cell span="1-2" span-s="row">
 <a id="top"></a>
-<hr class="grey">
 <h4>SIMPLE. EFFECTIVE. FUN.</h4>
 <hr class="grey">
 <h3 style="margin-bottom: -5px;">STATEMENT</h3>
@@ -51,11 +50,13 @@
 </ul>
 <hr class="grey">
 <h3 style="margin-bottom: -5px;">CONTACT</h3>
-<p>I love receiving emails from viewers, so email me!<br><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
+<p>I love receiving emails from viewers, so email me!<br><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#52;&#80;&#104;&#114;&#97;&#115;&#97;&#108;&#86;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
 </r-cell>
 <r-cell span="3.." span-s=row >
-<p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>Below is an introduction video that explains all you need to know about me, my channel and the videos.<br><br>Below that is a table with a list of the latest videos I have released.<br><br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.<br><br>The MENU section contains different ways to view the lists of videos.</em></hp>
-
+<p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>There is an introduction video that explains all you need to know about me, my channel and the videos.<br><br>Below that is a table with a list of the videos I have released.<br><br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.</em></p>
+<hr class="grey">
+<h2>INTRODUCTION VIDEO</h2>
+<p>COMING SOON</p>
 <hr class="grey">
 <h2>LATEST VIDEOS</h2>
 <table class="w-full">
