--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
 <p>COMING SOON</p>
 <hr class="grey">
 <h2>LATEST VIDEOS</h2>
-<table class="w-full">
+<p>Details coming soon</p>
+<!--<table class="w-full">
 <tr><th>Published</th><th>Code/Name</th><th>Link</th></tr>
 <tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">002</span> - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
 <tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">001</span> - What Are Phrasal Verbs?</td><td><a href="">x</a></td></tr>
 <tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">000</span> - About Me, This Channel and The Videos</td><td><a href="">x</a></td></tr>
-</table>
+</table>-->
 <hr class="grey">
 <h2>YOUR PHOTOS</h2>
 <p>During the videos, I use background photos.  To start with, I'll use my photos, but I would love it if I could use <strong>*YOUR*</strong> photos of the places you have visited and used your English.<br>If you would like me to use your photos please follow the guidelines below:</p>
