--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <link rel="stylesheet" href="4phrasalverbs.css">
 </head>
 <body>
-<h1 class="xxxlarge single-line" style="color: #017E3C">4 PHRASAL<br>VERBS</h1>
+<h1 class="xlarge single-line" style="color: #124292">4 PHRASAL<br>VERBS</h1>
 <r-grid columns="7">
 <r-cell span="1-2" span-s="row">
 <a id="top"></a>
@@ -51,8 +51,10 @@
 <hr class="grey">
 <h3 style="margin-bottom: -5px;">CONTACT</h3>
 <p>I love receiving emails from viewers, so email me!<br><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#52;&#112;&#104;&#114;&#97;&#115;&#97;&#108;&#118;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">&#52;&#80;&#104;&#114;&#97;&#115;&#97;&#108;&#86;&#101;&#114;&#98;&#115;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a></p>
+
 </r-cell>
 <r-cell span="3.." span-s=row >
+<h2>INTRODUCTION</h2>
 <p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>There is an introduction video that explains all you need to know about me, my channel and the videos.<br><br>Below that is a table with a list of the videos I have released.<br><br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.</em></p>
 <hr class="grey">
 <h2>INTRODUCTION VIDEO</h2>
@@ -62,26 +64,11 @@
 <p>Details coming soon</p>
 <!--<table class="w-full">
 <tr><th>Published</th><th>Code/Name</th><th>Link</th></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">002</span> - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">001</span> - What Are Phrasal Verbs?</td><td><a href="">x</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #017E3C;">000</span> - About Me, This Channel and The Videos</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #124292;">002</span> - Turn on, Turn Off, Turn Up & Turn Down</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #124292;">001</span> - What Are Phrasal Verbs?</td><td><a href="">x</a></td></tr>
+<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #124292;">000</span> - About Me, This Channel and The Videos</td><td><a href="">x</a></td></tr>
 </table>-->
 <hr class="grey">
-<h2>YOUR PHOTOS</h2>
-<p>During the videos, I use background photos.  To start with, I'll use my photos, but I would love it if I could use <strong>*YOUR*</strong> photos of the places you have visited and used your English.<br>If you would like me to use your photos please follow the guidelines below:</p>
-<ul>
-<li>You must have visited the place.</li>
-<li>You must have taken the photo yourself.</li>
-<li>There must NOT be any people who can be indentifed in them.</li>
-<li>The photo should be high-quality resolution because I create my videos in 4k.</li>
-<li>They also should be in landscape proportions.</li>
-</ul>
-<p>I will credit your photo in the text description and if you want to share the story of the photo (<span class="small">this is a great way to practice using your English!</span>), I will post that too.</p>
-<ul>
-<li>Photos can be anonymous if you want them to be.</li>
-<li>You retain copyright of the photos.</li>
-</ul>
-<p>Please send them to me via email.</p>
 </r-cell>
 </r-grid>
 <hr class="grey">
