--- a/verbs.html
+++ b/verbs.html
@@ -64,19 +64,18 @@
 
 </r-cell>
 <r-cell span="3.." span-s=row >
-<h2>INTRODUCTION</h2>
-<p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>There is an introduction video that explains all you need to know about me, my channel and the videos.<br><br>Below that is a table with a list of the videos I have released.<br><br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.</em></p>
+<h2>DEFINITIONS</h2>
+<p><em>Be,ow are the basic definitions of phrasal verbs I have made videos for.<br><br>Currently, there are not many, but as I make more videos this list will increase.<br><br>As well as the basic definition, the table also includes a link to the video where I explained the phrasal verb.</em></p>
+
 <hr class="grey">
-<h2>INTRODUCTION VIDEO</h2>
-<p>COMING SOON</p>
-<hr class="grey">
-<h2>LATEST VIDEOS</h2>
-<p>Details coming soon</p>
+<h2>PHRASAL VERBS LIST</h2>
 <table class="w-full">
-<tr><th>Published</th><th>Code</th><th>Name/Link</th></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #124292;">002</span></td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #124292;">001</span></td><td><a href="https://youtu.be/kkzQXQBHm3Q">What Are Phrasal Verbs?</a></td></tr>
-<tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #124292;">000</span></td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td></tr>
+<tr><th>Verb</th><th>Defintion</th><th>Link & Video Code</th></tr>
+<tr><td>Turn Down</td><td>To decrease the intensity, especially sound.</td><td><a href="">002</a></td></tr>
+<tr><td>Turn Off</td><td>To stop a piece of equipment, for example electrical or plumbing.</td><td><a href="">002</a></td></tr>
+<tr><td>Turn On</td><td>To start a piece of equipment, for example electrical or plumbing.</td><td><a href="">002</a></td></tr>
+<tr><td>Turn Up</td><td>To increase the intensity, especially sound.</td><td><a href="">002</a></td></tr>
+
 </table>
 <hr class="grey">
 </r-cell>
