--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>There is an introduction video that explains all you need to know about me, my channel and the videos.<br><br>Below that is a table with a list of the videos I have released.<br><br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.</em></p>
 <hr class="grey">
 <h2>INTRODUCTION VIDEO</h2>
-<p>COMING SOON</p>
+<div class="videoWrapper">
+<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/K6lY1XawDOM" allowfullscreen></iframe>
+</div>
 <hr class="grey">
-<h2>LATEST VIDEOS</h2>
-<p>Details coming soon</p>
 <table class="w-full">
 <tr><th>Published</th><th>Code</th><th>Name/Link</th></tr>
 <tr><td>1<span class="superscript">st</span> Sep</td><td><span style="color: #124292;">002</span></td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
