--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta name="author" content="Phillip Marlowe">
 <!--  Open Graph -->
 <meta property="og:title" content="4PhrasalVerbs.com">
-<meta property="og:description" content="Free online squash coaching videos to improve your game">
+<meta property="og:description" content="Free online English Phrasal Verb Lessons">
 <meta property="og:image" content="https://4PhrasalVerbs.com/og-4phrasalverbs.jpg">
 <meta property="og:url" content="4PhrasalVerbs.com">
 <meta name="twitter:card" content="summary_large_image">
@@ -75,7 +75,7 @@
 <table class="w-full">
 <tr><th>Published</th><th>Code</th><th>Name/Link</th></tr>
 <tr><td>25<span class="superscript">th</span> Sep</td><td><span style="color: #124292;">002</span></td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
-<tr><td>25<span class="superscript">th</span> Sep</td><td><span style="color: #124292;">001</span></td><td><a href="https://youtu.be/kkzQXQBHm3Q">What Are Phrasal Verbs?</a></td></tr>
+<tr><td>25<span class="superscript">th</span> Sep</td><td><span style="color: #124292;">001</span></td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td></tr>
 <tr><td>25<span class="superscript">th</span> Sep</td><td><span style="color: #124292;">000</span></td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td></tr>
 </table>
 <hr class="grey">
