added more tables and tideied up intro

--- a/index.html
+++ b/index.html
@@ -65,20 +65,30 @@
 </r-cell>
 <r-cell span="3.." span-s=row >
 <h2>INTRODUCTION</h2>
-<p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br><br>There is an introduction video that explains all you need to know about me, my channel and the videos.<br><br>Below that is a table with a list of the videos I have released.<br><br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.</em></p>
+<p><em>Hello, my name is Phillip and this is 4 Phrasal Verbs, a website to make finding my videos easy.<br>There is an introduction video that explains all you need to know about me, my channel and the videos.<br>Below that is a table with a list of the videos I have released.<br>I only started making videos in early September 2020, so there's not much here at the moment, but I will be adding more videos regularly.</em></p>
 <hr class="grey">
 <h2>INTRODUCTION VIDEO</h2>
 <div class="videoWrapper">
 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/K6lY1XawDOM" allowfullscreen></iframe>
 </div>
 <hr class="grey">
+<h2>VIDEO LIST</h2>
 <table class="w-full">
-<tr><th>Published</th><th>Code</th><th>Name/Link</th></tr>
-<tr><td>25<span class="superscript">th</span> Sep</td><td><span style="color: #124292;">002</span></td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
-<tr><td>25<span class="superscript">th</span> Sep</td><td><span style="color: #124292;">001</span></td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td></tr>
-<tr><td>25<span class="superscript">th</span> Sep</td><td><span style="color: #124292;">000</span></td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td></tr>
+<tr><th>Code</th><th>Published</th><th>Phrasal Verbs/Link</th></tr>
+<tr><td><span style="color: #124292;">002</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
+<tr><td><span style="color: #124292;">001</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td></tr>
+<tr><td><span style="color: #124292;">000</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td></tr>
 </table>
 <hr class="grey">
+<h2>PHRASAL VERBS LIST</h2>
+<p>Jump to a letter: <a href="">A</a>  <a href="">B</a>  <a href="">C</a>  <a href="">D</a>  <a href="">E</a>  <a href="">F</a> <a href="">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
+<table class="w-full">
+<tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
+<tr><td><A NAME="T"></a>Turn Down</td><td>To decrease the intensity, especially sound.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn Off</td><td>To stop a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn On</td><td>To start a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+<tr><td>Turn Up</td><td>To increase the intensity, especially sound.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
+</table>
 </r-cell>
 </r-grid>
 <hr class="grey">
