--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <h2>VIDEO LIST</h2>
 <table class="w-full">
 <tr><th>Code</th><th>Published</th><th>Phrasal Verbs/Link</th></tr>
+<tr><td><span style="color: #124292;">003</span></td><td>03<span class="superscript">rd</span> Oct</td><td><a href="https://youtu.be/xBXb4oDXRuA">Cut Out, Cut Down On, Eat Out, Live On</a></td></tr>
 <tr><td><span style="color: #124292;">002</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
 <tr><td><span style="color: #124292;">001</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td></tr>
 <tr><td><span style="color: #124292;">000</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td></tr>
@@ -84,6 +85,10 @@
 <p>Jump to a letter: <a href="">A</a>  <a href="">B</a>  <a href="">C</a>  <a href="">D</a>  <a href="">E</a>  <a href="">F</a> <a href="">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
 <table class="w-full">
 <tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
+<tr><td><A NAME="C"></a>Cut Down on</td><td>To reduce the quantity of something.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td>Cut Out</td><td>To remove soemthing completely.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="E"></a>Eat Out</td><td>To dine outside of the home, in a restaurant for example.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="L"></a>Live On</td><td>To consume mostly one type of food.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td><A NAME="T"></a>Turn Down</td><td>To decrease the intensity, especially sound.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn Off</td><td>To stop a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn On</td><td>To start a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
