updated letter intralinks

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </table>
 <hr class="grey">
 <h2>PHRASAL VERBS LIST</h2>
-<p>Jump to a letter: <a href="">A</a>  <a href="">B</a>  <a href="">C</a>  <a href="">D</a>  <a href="">E</a>  <a href="">F</a> <a href="">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
+<p>Jump to a letter: <a href="">A</a>  <a href="">B</a>  <a href="#C">C</a>  <a href="">D</a>  <a href="#E">E</a>  <a href="">F</a> <a href="">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="~L">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
 <table class="w-full">
 <tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
 <tr><td><A NAME="C"></a>Cut Down on</td><td>To reduce the quantity of something.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
