edited table header for video list

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <hr class="grey">
 <h2>VIDEO LIST</h2>
 <table class="w-full">
-<tr><th>Code</th><th>Published</th><th>Phrasal Verbs/Link</th></tr>
+<tr><th>Code</th><th>Published</th><th>Phrasal verbs covered and link to the video</th></tr>
 <tr><td><span style="color: #124292;">003</span></td><td>03<span class="superscript">rd</span> Oct</td><td><a href="https://youtu.be/xBXb4oDXRuA">Cut Out, Cut Down On, Eat Out, Live On</a></td></tr>
 <tr><td><span style="color: #124292;">002</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
 <tr><td><span style="color: #124292;">001</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td></tr>
