--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 <table class="w-full">
 <tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
 <tr><td><A NAME="C"></a>Cut Down on</td><td>To reduce the quantity of something.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td>Cut Out</td><td>To remove soemthing completely.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
-<tr><td><A NAME="E"></a>Eat Out</td><td>To dine outside of the home, in a restaurant for example.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td>Cut Out</td><td>To remove something completely.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
+<tr><td><A NAME="E"></a>Eat Out</td><td>To eat outside of the home, in a restaurant for example.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td><A NAME="L"></a>Live On</td><td>To consume mostly one type of food.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
 <tr><td><A NAME="T"></a>Turn Down</td><td>To decrease the intensity, especially sound.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
 <tr><td>Turn Off</td><td>To stop a piece of equipment, for example electrical or plumbing.</td><td><a href="https://youtu.be/0AFQ04Lj52c">002</a></td></tr>
