--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
 <h3 style="margin-bottom: -5px;">STATEMENT</h3>
 <p>"<em>I am passionate about creating English teaching videos and content that is useful and engaging to all standards of learners.</em>"</p>
 <hr class="grey">
+
+<h3 style="margin-bottom: -5px;">MENU</h3>
+<ul class="menulist compact">
+<li><a href="#videolist">VIDEO LIST</a></li>
+<li><a href="#playlists">PLAYLISTS</a></li>
+<li><a href="#phrasalverbslist">PHRASAL VERBS LIST</a></li>
+<li><a href="javascript:randomvideo()">FEELING LUCKY?</a></li>
+</ul>
+<hr class="grey">
 <h3 style="margin-bottom: -5px;">SOCIAL MEDIA</h3>
 <ul class="menulist compact">
 <li><a href="https://www.youtube.com/channel/UC3El1sltq5I1BUJiByctd9Q">YOUTUBE</a></li>
@@ -72,19 +81,25 @@
 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/K6lY1XawDOM" allowfullscreen></iframe>
 </div>
 <hr class="grey">
-<h2>VIDEO LIST</h2>
+<a name="videolist"></a><h2>VIDEO LIST</h2>
 <table class="w-full">
-<tr><th>Code</th><th>Published</th><th>Phrasal verbs covered and link to the video</th></tr>
+<tr><th>Code</th><th>Published</th><th>Phrasal verbs covered and link to the video</th><th>Poster</th></tr>
 <!--<tr><td><span style="color: #124292;">004</span></td><td>02<span class="superscript">nd</span> Oct</td><td><a href="https://youtu.be/xBXb4oDXRuA">Break Up With, Get On With, Fall Out With, Make Up With</a></td></tr>-->
-<tr><td><span style="color: #124292;">004</span></td><td>09<span class="superscript">th</span> Oct</td><td><!--<a href="https://youtu.be/xBXb4oDXRuA">-->Break Up With, Get On With, Fall Out With, Make Up With<!--</a>--></td></tr>
-<tr><td><span style="color: #124292;">003</span></td><td>02<span class="superscript">nd</span> Oct</td><td><a href="https://youtu.be/xBXb4oDXRuA">Cut Out, Cut Down On, Eat Out, Live On</a></td></tr>
-<tr><td><span style="color: #124292;">002</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td></tr>
-<tr><td><span style="color: #124292;">001</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td></tr>
-<tr><td><span style="color: #124292;">000</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">004</span></td><td style="vertical-align:middle">09<span class="superscript">th</span> Oct</td><td style="vertical-align:middle"><!--<a href="https://youtu.be/xBXb4oDXRuA">-->Break Up With, Get On With, Fall Out With, Make Up With<!--</a>--></td><td><a href="https://imgbox.com/g1IiGYpL" ><img src="https://images2.imgbox.com/0e/84/g1IiGYpL_o.jpg" alt="image host"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">003</span></td><td style="vertical-align:middle">02<span class="superscript">nd</span> Oct</td><td style="vertical-align:middle"><a href="https://youtu.be/xBXb4oDXRuA">Cut Out, Cut Down On, Eat Out, Live On</a></td><td><a href="https://drive.google.com/file/d/1OvX_VG93mJMWC9OrokaJOVAKtgegJMtf/view?usp=sharing" ><img src="https://images2.imgbox.com/03/f8/pjha73nh_o.png" alt="Learn English Phrasal Verbs"/></a></td></tr>
+<tr><td style="vertical-align:middle"><span style="color: #124292;">002</span></td><td style="vertical-align:middle">25<span class="superscript">th</span> Sep</td><td style="vertical-align:middle"><a href="https://youtu.be/0AFQ04Lj52c">Turn on, Turn Off, Turn Up & Turn Down</a></td><td><a href="https://imgbox.com/g1IiGYpL" ><img src="https://images2.imgbox.com/0e/84/g1IiGYpL_o.jpg" alt="image host"/></a></td></tr>
+<tr><td><span style="color: #124292;">001</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/kkzQXQBHm3Q">A Basic Introduction to Phrasal Verbs</a></td><td>No poster</td></tr>
+<tr><td><span style="color: #124292;">000</span></td><td>25<span class="superscript">th</span> Sep</td><td><a href="https://youtu.be/K6lY1XawDOM">About Me, This Channel and The Videos</a></td><td>No poster</td></tr>
 </table>
 <hr class="grey">
-<h2>PHRASAL VERBS LIST</h2>
-<p>Jump to a letter: <a href="">A</a>  <a href="">B</a>  <a href="#C">C</a>  <a href="">D</a>  <a href="#E">E</a>  <a href="">F</a> <a href="">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="~L">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
+<a name="playlists"></a><h2>PLAYLISTS</h2>
+<h4>THEMES</h4>
+<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl33sIzjcuvzKXkdCXB3n2fKF">2020</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32UgwRUvN_0NQA-Z4tt4KGe">Reference</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl329t1WApodrMH3pXbQoSgqT">Food</a> . <a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl3343F4Lscy6HPyw2Z-Rr2KN">Relationships</a></p>
+<h4>VERBS</h4>
+<p><a href="https://www.youtube.com/playlist?list=PLGjNwsRMbl32lMrtfpChNxtZ4QQqBXzET">Turn</a></p>
+<hr class="grey">
+<a name="phrasalverbslist"></a><h2>PHRASAL VERBS LIST</h2>
+<p>Jump to a letter:<br><a href="">A</a>  <a href="">B</a>  <a href="#C">C</a>  <a href="">D</a>  <a href="#E">E</a>  <a href="">F</a> <a href="">G</a>  <a href="">H</a>  <a href="">I</a>  <a href="">J</a>  <a href="">K</a>  <a href="~L">L</a>  <a href="">M</a>  <a href="">N</a>  <a href="">O</a>  <a href="">P</a>  <a href="">Q</a>  <a href="">R</a>  <a href="">S</a>  <a href="#T">T</a>  <a href="">U</a>  <a href="">V</a>  <a href="">W</a>  <a href="">X</a>  <a href="">Y</a>  <a href="">Z</a>  </p> 
 <table class="w-full">
 <tr><th>Verb</th><th>Basic Defintion</th><th>Link to Video & Code</th></tr>
 <tr><td><A NAME="C"></a>Cut Down on</td><td>To reduce the quantity of something.</td><td><a href="https://youtu.be/xBXb4oDXRuA">003</a></td></tr>
@@ -106,5 +121,16 @@
 <r-cell span="3.." span-s=row ><h1 class="large single-line right" style="padding-right: 0.1em;"><a class="OMG" href="#top">BACK TO TOP </a></h1>
 </r-cell>
 </r-grid>
+<script>
+var videolinks=new Array()
+videolinks[0]="https://youtu.be/K6lY1XawDOM";
+videolinks[1]="https://youtu.be/kkzQXQBHm3Q";
+videolinks[2]="https://youtu.be/0AFQ04Lj52c";
+videolinks[3]="https://youtu.be/xBXb4oDXRuA";
+videolinks[4]="https://youtu.be/xBXb4oDXRuA";
+function randomvideo(){
+window.location=videolinks[Math.floor(Math.random()*videolinks.length)]
+}
+</script>
 </body>
 </html>
